@@ -362,6 +362,9 @@ BUGFIXES:
   ZOOKEEPER-2548: zooInspector does not start on Windows
   (Arshad Mohammad via phunt)
 
+  ZOOKEEPER-2558: Potential memory leak in recordio.c
+  (Michael Han via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
